cmake_minimum_required(VERSION 3.22)
project(Snake)

if (WIN32)
    set(CMAKE_CXX_STANDARD 14)
    set(SFML_STATIC_LIBRARIES TRUE)
    set(SFML_DIR D:/Projekte/C++/SFML-2.5.1/lib/cmake/SFML)
    find_package(SFML COMPONENTS system graphics audio network window REQUIRED)
    include_directories(D:/Projekte/C++/SFML-2.5.1/include)
endif()
if(APPLE)
    set(CMAKE_CXX_STANDARD 14)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
    set(CMAKE_OSX_ARCHITECTURES "x86_64")
    find_package(SFML COMPONENTS system graphics audio network window REQUIRED)
    include_directories(/usr/local/include)
    include_directories(${SFML_INCLUDE_DIRS})
endif()

add_executable(Snake main.cpp Window.cpp Window.h Game.cpp Game.h Snake.cpp Snake.h World.cpp World.h)
target_link_libraries(Snake sfml-system sfml-graphics sfml-audio sfml-network sfml-window)